Fix negative player count misrepresentation, add experimental support for discord forwarded messages, bump deps and version